test/testdata/network/proxy-approval.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "proxy-approval"
  namespace: dynatrace
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
  egress:
    - ports:
        - protocol: TCP
          port: 3128
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: proxy
          podSelector:
            matchLabels:
              app: squid
  ingress:
    - ports:
        - protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: proxy
          podSelector:
            matchLabels:
              app: squid
